# generic-json-encoders

./: README.md  pyproject.toml
generic_json_encoders/: base.py
tests/: test_basic.py
